<resources>
    <string name="app_name">kotlinAcademyClass2</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account_sign_up">Dont have an account ? Sign Up</string>
    <string name="enter_your_fullname">Enter Your FullName</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="register">Register</string>
    <string name="already_have_an_acount_login">Already Have an Acount?! Login</string>
    <string name="enter_your_first_number">Enter your first number</string>
    <string name="enter_your_second_number">Enter your second number</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="division">/</string>
    <string name="result">Result</string>
    <string name="clear">Clear</string>
    <string name="counter">The counter will appear here : </string>
    <string name="the_counter_will_appear_here">The counter will appear here</string>
    <string name="count_1">Count +1</string>
    <string name="calculator_application">Calculator Application</string>
    <string name="counter_application">Counter Application</string>
    <string name="resturaunt_application">Resturaunt Application</string>
    <string name="todolist_application">Todolist Application</string>
    <string name="which_kind_of_burger_you_want_to_order">Which Kind of burger you want to order</string>
    <string name="beef">Beef</string>
    <string name="chicken">Chicken</string>
    <string name="shrimp">Shrimp</string>
    <string name="which_extras_you_want_to_add">Which Extras you want to add ?</string>
    <string name="cheese">Cheese</string>
    <string name="onions_rings">Onions Rings</string>
    <string name="salad">Salad</string>
    <string name="order">Order</string>
    <string name="total_order">Total Order</string>
    <string name="enter_your_todo">Enter your todo</string>
    <string name="add">Add</string>
    <string name="todotitle">TodoTitle</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="shopping_item_name">Shopping Item Name</string>
    <string name="item_amount">Item Amount</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="add_new_item">Add New Item</string>
    <string name="amount">Amount</string>
    <string name="cancel">Cancel</string>
    <string name="adddialog">ADD</string>
    <string name="upload_image">Upload Image</string>
    <string name="download_image">Download Image</string>
    <string name="delete_image">Delete Image</string>
    <string name="enter_notification_title">Enter notification title</string>
    <string name="enter_notification_message">Enter notification Message</string>
    <string name="token">Token</string>
    <string name="send_notification">Send Notificaiton</string>
</resources>