<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/btnCalculatorApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculator_application" />

    <Button
        android:id="@+id/btnCounterApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/counter_application" />
    <Button
        android:id="@+id/btnRestaurantApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resturaunt_application" />
    <Button
        android:id="@+id/btnTodoListApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todolist_application" />

</LinearLayout>